cmake_minimum_required(VERSION 3.13)

include(pico_sdk_import.cmake)

project(task3 C CXX ASM)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)

pico_sdk_init()
include_directories(${CMAKE_SOURCE_DIR})

add_executable(task3
  main.S
  sdlink.c
)

pico_enable_stdio_uart(task3 0)
pico_enable_stdio_usb(task3 1)

pico_add_extra_outputs(task3)

target_link_libraries(task3 pico_stdlib hardware_gpio)
